# mini-stripe-rs

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
api/: Cargo.toml
api/migrations/: 20260209123733_create_payment_intents.sql  20260212143327_create_idempotency_keys.sql  20260213135042_add_payment_intent_id_to_idempotency_keys.sql  20260220194846_create_events_outbox_table.sql  20260228174630_create_webhook_endpoints.sql  20260306195213_create_webhook_deliveries.sql
api/src/: app.rs  events_outbox.rs  lib.rs  main.rs  payment_intents.rs  webhook_endpoints.rs
api/tests/: payment_intents.rs  webhook_endpoints.rs
worker/: Cargo.toml
worker/src/: db.rs  deliver.rs  main.rs  signature.rs  worker.rs
